# CodeAsk

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  alembic.ini  pyproject.toml  start.sh
.github/workflows/: backend.yml  eval.yml  frontend.yml
alembic/: env.py
alembic/versions/: 20260429_0001_initial.py  20260430_0002_features_documents.py  20260430_0003_document_references.py  20260430_0004_reports.py  20260430_0005_fts_tables.py  20260430_0006_code_index.py  20260430_0007_llm_configs.py  20260430_0008_skills.py  20260430_0009_sessions.py  20260430_0010_session_features_repo_bindings.py  20260430_0011_session_turns_attachments.py  20260430_0012_agent_traces.py  20260501_0013_admin_rbac_llm_sessions.py  20260501_0014_session_attachment_metadata.py  20260501_0015_session_attachment_mapping.py  20260502_0016_metrics_tables.py  20260502_0017_analysis_policy_fields.py  20260503_0018_wiki_native_models.py  20260505_0019_wiki_import_sessions.py  20260505_0020_feature_archive_status.py
docs/: README.md  STRUCTURE.md
docs/v1.0/: README.md
docs/v1.0.1/: README.md
evals/: __init__.py  _baseline.json  run.py  types.py
evals/answer_quality/: __init__.py  score.py
evals/scope_detection/: __init__.py  score.py
evals/sufficiency/: __init__.py  score.py
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: happy-path.spec.ts  route-refresh-live.spec.ts  wiki-tail.spec.ts  (+4 more)
scripts/: seed_anythingllm_reference_feature.py
tests/: conftest.py  test_smoke.py
(+458 files in other folders)
