[project]
name = "codeask"
version = "0.1.0"
description = "Private-deployment R&D Q&A system"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "cryptography>=43",
    "structlog>=24.4",
    "httpx>=0.27",
    "markdown-it-py>=3.0",
    "pypdfium2>=4.30",
    "python-docx>=1.1",
    "python-multipart>=0.0.20",
    "apscheduler>=3.10",
    "litellm>=1.50",
    "tiktoken>=0.7",
    "jsonschema>=4.23",
]

[project.scripts]
codeask = "codeask.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeask"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "pyright>=1.1.385",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
strict = ["src/codeask"]
